# pretty_date

./: COPYRIGHT  Cargo.toml  LICENSE-MIT  README.md
src/: lib.rs  pretty_date_format.rs  pretty_date_formatter.rs  pretty_date_rule.rs  test.rs
src/rules/: just_now.rs  mod.rs  this_week.rs  this_year.rs  today.rs  yesterday.rs
