[package]
name = "pretty_date"
version = "0.1.0"
edition = "2021"
authors = ["david@morgan-brown.com"]
description = "A rust library for the simple, friendly, human readable formatting for the chrono NaiveDateTime"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/mbcltd/pretty_date"
documentation = "https://github.com/mbcltd/pretty_date"
repository = "https://github.com/mbcltd/pretty_date"
keywords = ["date", "pretty print"]
categories = ["date-and-time", "value-formatting"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
lazy_static = "1.4.0"
